spring-boot-hello-world/openshift/spring-boot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: spring-boot-tls
  name: spring-boot
  namespace: test
spec:
  ports:
  - name: oauth-proxy
    port: 9095
    protocol: TCP
    targetPort: oauth-proxy
  selector:
    deployment: spring-boot
  type: ClusterIP
