spring-boot-hello-world/openshift/spring-boot-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oauth-proxy-spring-boot
  namespace: test
spec:
  host: spring-boot.apps.barp.opencontainer.io
  port:
    targetPort: oauth-proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: spring-boot
    weight: 100
  wildcardPolicy: None
